service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app.kubernetes.io/name: app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
