route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app1
spec:
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: app1
